--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.20",
-    "@types/node": "12.11.7",
-    "@types/react": "16.9.11",
-    "@types/react-dom": "16.9.3",
-    "@types/react-router-dom": "^5.1.2",
-    "@types/yup": "^0.26.24",
-    "axios": "^0.19.0",
-    "bootstrap": "^4.3.1",
-    "formik": "^2.0.3",
-    "react": "^16.11.0",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.11.0",
+    "@types/jest": "25.2.1",
+    "@types/node": "13.13.4",
+    "@types/react": "16.9.34",
+    "@types/react-dom": "16.9.7",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/yup": "^0.28.0",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "formik": "^2.1.4",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "typescript": "3.6.4",
-    "yup": "^0.27.0"
+    "react-scripts": "^3.4.1",
+    "typescript": "3.8.3",
+    "yup": "^0.28.4"
   },
   "scripts": {
     "start": "react-scripts start",
