--- a/package.json
+++ b/package.json
@@ -3,22 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "25.2.1",
-    "@types/node": "13.13.4",
-    "@types/react": "16.9.34",
-    "@types/react-dom": "16.9.7",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/yup": "^0.28.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "redux": "^4.0.5",
     "typescript": "3.8.3",
     "yup": "^0.28.4"
+  },
+  "devDependencies": {
+    "@types/jest": "25.2.1",
+    "@types/node": "13.13.4",
+    "@types/react": "16.9.34",
+    "@types/react-dom": "16.9.7",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/yup": "^0.28.0"
   },
   "scripts": {
     "start": "react-scripts start",
