--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "typescript": "3.8.3",
     "yup": "^0.28.4"
   },
@@ -32,7 +33,13 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "semi": [
+        1,
+        "always"
+      ]
+    }
   },
   "browserslist": {
     "production": [
