--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.13",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
     "formik": "^2.1.4",
+    "formik-material-ui": "^2.0.0-beta.1",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
@@ -15,14 +15,14 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "typescript": "3.8.3",
-    "yup": "^0.28.4"
+    "yup": "^0.28.5"
   },
   "devDependencies": {
     "@types/jest": "25.2.1",
-    "@types/node": "13.13.4",
+    "@types/node": "13.13.5",
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.7",
-    "@types/react-redux": "^7.1.7",
+    "@types/react-redux": "^7.1.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/yup": "^0.28.0"
   },
