--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.2",
     "formik": "^2.1.4",
     "formik-material-ui": "^2.0.0-beta.1",
+    "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/jest": "25.2.1",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "13.13.5",
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.7",
