--- a/package.json
+++ b/package.json
@@ -3,32 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.13",
+    "@material-ui/core": "^4.11.0",
     "axios": "^0.19.2",
-    "formik": "^2.1.4",
-    "formik-material-ui": "^2.0.0-beta.1",
+    "formik": "^2.1.5",
+    "formik-material-ui": "^2.0.1",
     "jwt-decode": "^2.2.0",
     "normalizr": "^3.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
-    "typescript": "3.8.3",
-    "yup": "^0.28.5"
+    "typescript": "3.9.7",
+    "yup": "^0.29.1"
   },
   "devDependencies": {
-    "@types/jest": "25.2.1",
+    "@types/jest": "26.0.5",
     "@types/jwt-decode": "^2.2.1",
-    "@types/node": "13.13.5",
-    "@types/react": "16.9.34",
-    "@types/react-dom": "16.9.7",
-    "@types/react-redux": "^7.1.8",
+    "@types/node": "14.0.24",
+    "@types/react": "16.9.43",
+    "@types/react-dom": "16.9.8",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
-    "@types/yup": "^0.28.0"
+    "@types/yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
