--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@types/socket.io-client": "^1.4.34",
     "axios": "^0.20.0",
     "formik": "^2.2.0",
     "formik-material-ui": "^3.0.0",
@@ -17,6 +18,7 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
+    "socket.io-client": "^2.3.1",
     "typescript": "4.0.3",
     "yup": "^0.29.3"
   },
